tests/Fase2-Semantic/error/t16-calling_a_method_from_another_not_declarated__class.ctds
class aux{
	integer y;

	bool greater_than_zero(){
		return true;
	}
}

class main {
	integer x;

	integer add(){
		x = x+1;
		return x;
	}

	void main(){
		maux var;
		x=0;
		var.greater_than_zero();
	}
	
}
